@@ -34,7 +34,7 @@
   <BR>
   <BR>
   <HR>
-  <H3>Last updated: August 19, 2002</H3>
+  <H3>Last updated: August 24, 2002</H3>
   <HR>
   <TABLE BORDER="1">
     <CAPTION>Results of OpenVRML Conformance Testing</CAPTION>
@@ -219,7 +219,7 @@
       <TD><TD><TD>29<TD><TD>*<TD>Failed! See above.
     <TR>
       <TD><TD>MovieTexture
-      <TD>1<TD>*<TD><TD>Failed! Get error message "Error Decoding MPEG stream". No text displays to start the animation.
+      <TD>1<TD>*<TD><TD>Failed! Get error message "Error Decoding MPEG stream". Animation starts before clicking on text.
     <TR>
       <TD><TD><TD>2<TD><TD>*<TD>Failed! MPEG audio not supported yet.
     <TR>
@@ -227,25 +227,25 @@
     <TR>
       <TD><TD><TD>4<TD>*<TD><TD>Failed! Movie plays once but does not loop.
     <TR>
-      <TD><TD><TD>5<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>5<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>6<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>6<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>7<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>7<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>8<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>8<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>9<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>9<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>10<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>10<TD>*<TD><TD>
     <TR>
       <TD><TD><TD>11<TD><TD>*<TD>Failed! MovieTexture doesn't extend across three sides.
     <TR>
-      <TD><TD><TD>12<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>12<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>13<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>13<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>14<TD>*<TD><TD> Get error message "Error Decoding MPEG stream" though.
+      <TD><TD><TD>14<TD>*<TD><TD>
     <TR>
       <TD><TD><TD>15<TD><TD>*<TD>Failed! Can't map textures to Text nodes yet.
     <TR>
@@ -255,21 +255,21 @@
     <TR>
       <TD><TD><TD>18<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>19<TD>*<TD><TD>
+      <TD><TD><TD>19<TD><TD>*<TD>Failed! Movie should not start playing until text is clicked.
     <TR>
       <TD><TD><TD>20<TD><TD>*<TD>Failed! Movie should loop indefinitely but only loops once.
     <TR>
       <TD><TD><TD>21<TD><TD>*<TD>Failed! Movie should loop until stop is hit but stops after one loop regardless.
     <TR>
-      <TD><TD><TD>22<TD>*<TD><TD>
+      <TD><TD><TD>22<TD><TD>*<TD>Failed! Movie should not start playing until text is clicked.
     <TR>
-      <TD><TD><TD>23<TD><TD>*<TD>Failed! Should loop once but doesn't move at all.
+      <TD><TD><TD>23<TD><TD>*<TD>Failed! Movie should not start playing until text is clicked.
     <TR>
-      <TD><TD><TD>24<TD>*<TD><TD>
+      <TD><TD><TD>24<TD><TD>*<TD>Failed! Movie should not start playing.
     <TR>
-      <TD><TD><TD>25<TD>*<TD><TD>
+      <TD><TD><TD>25<TD><TD>*<TD>Failed! Movie should not start playing until text is clicked.
     <TR>
-      <TD><TD><TD>26<TD>*<TD><TD>
+      <TD><TD><TD>26<TD><TD>*<TD>Failed! Movie should not play.
     <TR>
       <TD><TD><TD>27<TD><TD>*<TD>Failed! Movie should not play at all.
     <TR>
@@ -548,7 +548,7 @@
     <TR>
       <TD><TD><TD>13<TD><TD>*<TD>Failed! Cube doesn't turn red on collision.
     <TR>
-      <TD><TD><TD>14<TD><TD>*<TD>Failed! FLY type doesn't seem to work.
+      <TD><TD><TD>14<TD><TD>*<TD>Failed! Cube doesn't turn red on collision.
     <TR>
       <TD><TD><TD>15<TD>*<TD><TD>
     <TR>
@@ -556,23 +556,23 @@
     <TR>
       <TD><TD><TD>17<TD><TD>*<TD>Failed! Cube doesn't turn red on collision.
     <TR>
-      <TD><TD><TD>18<TD><TD>*<TD>Failed! Viewpoint transition doesn't work properly. Instead tries to load viewpoint in Netscape.
+      <TD><TD><TD>18<TD><TD>*<TD>Failed! Following message is dumped to the console when clicking box:<BR>Warning: Couldn't load URL Top_View
     <TR>
-      <TD><TD><TD>19<TD><TD>*<TD>Failed! Viewpoint transition doesn't work properly. Instead tries to load viewpoint in Netscape.
+      <TD><TD><TD>19<TD><TD>*<TD>Failed! Cannot click on box.
     <TR>
-      <TD><TD><TD>20<TD><TD>*<TD>Failed! Navigation type doesn't display between the push and pop buttons. Stack appears to be working correctly though.
+      <TD><TD><TD>20<TD><TD>*<TD>Failed! Cannot seem to push anything on to the stack.
     <TR>
-      <TD><TD><TD>21<TD><TD>*<TD>Failed! Timestamps do not display.
+      <TD><TD><TD>21<TD><TD>*<TD>Failed! Text does not appear when clicking on boxes.
     <TR>
-      <TD><TD><TD>22<TD><TD>*<TD>Failed!
+      <TD><TD><TD>22<TD><TD>*<TD>Failed! Lookat seemed to freeze after clicking on one of the boxes.
     <TR>
-      <TD><TD><TD>23<TD><TD>*<TD>Failed!
+      <TD><TD><TD>23<TD><TD>*<TD>Failed! Lookat seems to freeze shortly after loading the world.
     <TR>
-      <TD><TD><TD>24<TD><TD>*<TD>Failed!
+      <TD><TD><TD>24<TD><TD>*<TD>Failed! Lookat seems to freeze shortly after loading the world.
     <TR>
-      <TD><TD><TD>25<TD><TD>*<TD>Failed!
+      <TD><TD><TD>25<TD><TD>*<TD>Failed! Lookat seems to freeze shortly after loading the world.
     <TR>
-      <TD><TD><TD>26<TD><TD>*<TD>Failed!
+      <TD><TD><TD>26<TD><TD>*<TD>Failed! Lookat seems to freeze shortly after loading the world.
     <TR>
       <TD><TD>Viewpoint
       <TD>1<TD><TD>*<TD>Failed! The current position does not display. The following message appears on the console<BR> ../../../../src/openvrml/OpenVRML/script.cpp:1528: verification (ok) failed
@@ -1113,7 +1113,7 @@
     <TR>
       <TD><TD><TD>3<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>4<TD><TD>*<TD>Failed! Console displays...<BR>Call to isOver1 in Script node NORMALIZEIT65<BR>Call to eventsProcessed in Script node NORMALIZEIT<BR>Call to isOver1 in Script node NORMALIZEIT<BR>NormalInterpolator::getField: no such field (value_changed)<BR>javascript: line 9: TypeError: nodein1.value_changed has no properties<BR>Call to isOver1 in Script node NORMALIZEIT failed.
+      <TD><TD><TD>4<TD><TD>*<TD>Failed! Nothing happens when moving over leftmost box.
     <TR>
       <TD><TD><TD>5<TD>*<TD><TD>
     <TR>
@@ -1124,7 +1124,7 @@
     <TR>
       <TD><TD><TD>3<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>4<TD><TD>*<TD>Failed! CORE DUMP! Console displays:<BR> Call to isOver1 in Script node MOVER<BR>OrientationInterpolator::getField: no such field (value_changed)<BR>lookat: ../../../../src/openvrml/OpenVRML/VrmlNodeScript.cpp:1816: VrmlField *{unnamed}::JavaScript_::createVrmlFieldFromJsval (JSContext *, long int, VrmlField::VrmlFieldType): Assertion `(((v) & (((JSUint32)1 << (3)) - 1)) == 0x0)' failed.<BR>Aborted (core dumped)
+      <TD><TD><TD>4<TD><TD>*<TD>Failed! Nothing happens when moving over leftmost box.
     <TR>
       <TD><TD><TD>5<TD>*<TD><TD>
     <TR>
@@ -1135,7 +1135,7 @@
     <TR>
       <TD><TD><TD>3<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>4<TD><TD>*<TD>Failed! CORE DUMP! Console displays:<BR>Call to isOver1 in Script node MOVEIT<BR>PositionInterpolator::getField: no such field (value_changed)<BR>lookat: ../../../../src/openvrml/OpenVRML/VrmlNodeScript.cpp:1845: VrmlField *{unnamed}::JavaScript_::createVrmlFieldFromJsval (JSContext *, long int, VrmlField::VrmlFieldType): Assertion `(((v) & (((JSUint32)1 << (3)) - 1)) == 0x0)' failed.<BR>Aborted (core dumped)
+      <TD><TD><TD>4<TD><TD>*<TD>Failed! Nothing happens when indicating the leftmost shape.
     <TR>
       <TD><TD><TD>5<TD>*<TD><TD>
     <TR>
@@ -1299,9 +1299,9 @@
     <TR>
       <TD><TD><TD>15<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>16<TD>*<TD><TD>
+      <TD><TD><TD>16<TD><TD>*<TD>Failed! Shapes should start colored black not green.
     <TR>
-      <TD><TD><TD>17<TD>*<TD><TD>
+      <TD><TD><TD>17<TD><TD>*<TD>Failed! Shapes should start colored black not green.
     <TR>
       <TD><TD><TD>18<TD>*<TD><TD>
     <TR>
@@ -1327,9 +1327,9 @@
     <TR>
       <TD><TD><TD>29<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>30<TD><TD>*<TD>Failed! Last figure of each set should not be illuminated.
+      <TD><TD><TD>30<TD><TD>*<TD>Failed! Last figure of each set should not be illuminated. Test is beyond minimum conformance requirements though.
     <TR>
-      <TD><TD><TD>31<TD><TD>*<TD>Failed! Incorrect illumination.
+      <TD><TD><TD>31<TD><TD>*<TD>Failed! Last figure of each set should not be illuminated. Test is beyond minimum conformance requirements though.
     <TR>
       <TD><TD><TD>32<TD>*<TD><TD>
     <TR>
@@ -1407,7 +1407,7 @@
     <TR>
       <TD><TD><TD>7H<TD>*<TD><TD>
     <TR>
-      <TD><TD><TD>7I<TD><TD>*<TD>Failed! For some reason, when the PointSet shape on the left comes into view, the IndexedLineSet on the right turns into a PointSet as well! Even worse, if the viewer walks through the shapes, lookat aborts with the following error message:<BR>lookat: ../../../../src/openvrml/OpenVRML/VrmlMatrix.cpp:469: void OpenVRML::{unnamed}::get_affine_inverse (const OpenVRML::VrmlMatrix &, OpenVRML::VrmlMatrix &): Assertion `det*det > (1.0e-25)' failed.<BR>Aborted
+      <TD><TD><TD>7I<TD><TD>*<TD>Failed! For some reason, when the PointSet shape on the left comes into view, the IndexedLineSet on the right turns into a PointSet as well!
     <TR>
       <TD><TD><TD>7J<TD><TD>*<TD>Failed! Nothing happens.
     <TR>
@@ -1725,8 +1725,8 @@
   <HR>
   <H3>Summary of Results</H3>
   Total Number of Tests = 795<BR>
-  Total Passed = 511<BR>
-  Total Failed = 285<BR>
+  Total Passed = 505<BR>
+  Total Failed = 291<BR>
   <BR>
 
   <TABLE BORDER="1">
@@ -1736,15 +1736,15 @@
       <TH>Pass
       <TH>Fail
     <TR>
-      <TD>Appearance
-      <TD>138
-      <TD>48
+      <TD>Appearance (186)
+      <TD>133
+      <TD>53
     <TR>
-      <TD>Bindable Nodes
-      <TD>28
-      <TD>65
+      <TD>Bindable Nodes (93)
+      <TD>29
+      <TD>64
     <TR>
-      <TD>Geometric Properties
+      <TD>Geometric Properties (53)
       <TD>39
       <TD>14
     <TR>
@@ -1756,13 +1756,13 @@
       <TD>33
       <TD>19
     <TR>
-      <TD>Interpolators
+      <TD>Interpolators (30)
       <TD>20
       <TD>10
     <TR>
-      <TD>Lights
-      <TD>72
-      <TD>20
+      <TD>Lights (92)
+      <TD>70
+      <TD>22
     <TR>
       <TD>Misc (50)
       <TD>13
@@ -1898,12 +1898,12 @@
       <TD>7
     <TR>
       <TD>MovieTexture
-      <TD>29
-      <TD>10
+      <TD>24
+      <TD>15
     <TR>
       <TD>NavigationInfo
-      <TD>6
-      <TD>20
+      <TD>7
+      <TD>19
     <TR>
       <TD>Normal
       <TD>7
@@ -1974,8 +1974,8 @@
       <TD>4
     <TR>
       <TD>SpotLight
-      <TD>30
-      <TD>5
+      <TD>28
+      <TD>7
     <TR>
       <TD>Switch
       <TD>5
